// Copyright (c) 2023 AccelByte Inc. All Rights Reserved.
// This is licensed software from AccelByte Inc, for limitations
// and restrictions contact your company contract manager.

// source: IAM/AsyncAPI/oauth.yaml (0.1.0)
// hash: 1aeb8c915acaa94e321b129462d0a16b64434587

syntax = "proto3";

package accelbyte.iam.oauth.v1;
// Version v1.0.0

// --- imports ---

import "google/protobuf/empty.proto";


// --- options ---

option csharp_namespace = "AccelByte.IAM.Oauth";
option go_package = "accelbyte.net/iam/oauth";
option java_multiple_files = true;
option java_package = "net.accelbyte.iam.oauth";

// --- schema objects ---

// path: #/components/schemas/event
message Event {
    string id = 1;
    int64 version = 2;
    string name = 3;
    string namespace = 4;
    string parentNamespace = 5;
    string timestamp = 6;
    string clientId = 7;
    string userId = 8;
    string traceId = 9;
    string sessionId = 10;
}

// path: #/components/schemas/oauth
message Oauth {
    string clientId = 1;
    string responseType = 2;
    string platformId = 3;
}

// path: #/components/schemas/oauthThirdParty
message OauthThirdParty {
    string platformId = 1;
}

// path: #/components/messages/oauthRequestAuthorized/payload/properties/payload
message AnonymousSchema1 {
    Oauth oauth = 1;
}

// path: #/components/messages/oauthRequestAuthorized/payload
message OauthRequestAuthorizedMessage {
    AnonymousSchema1 payload = 1;

    // allOf(#/components/schemas/event)
    string id = 2;
    int64 version = 3;
    string name = 4;
    string namespace = 5;
    string parentNamespace = 6;
    string timestamp = 7;
    string clientId = 8;
    string userId = 9;
    string traceId = 10;
    string sessionId = 11;
}

// path: #/components/messages/oauthTokenGenerated/payload/properties/payload
message AnonymousSchema2 {
    Oauth oauth = 1;
}

// path: #/components/messages/oauthTokenGenerated/payload
message OauthTokenGeneratedMessage {
    AnonymousSchema2 payload = 1;

    // allOf(#/components/schemas/event)
    string id = 2;
    int64 version = 3;
    string name = 4;
    string namespace = 5;
    string parentNamespace = 6;
    string timestamp = 7;
    string clientId = 8;
    string userId = 9;
    string traceId = 10;
    string sessionId = 11;
}

// path: #/components/messages/oauthTokenRevoked/payload/properties/payload
message AnonymousSchema3 {
    Oauth oauth = 1;
}

// path: #/components/messages/oauthTokenRevoked/payload
message OauthTokenRevokedMessage {
    AnonymousSchema3 payload = 1;

    // allOf(#/components/schemas/event)
    string id = 2;
    int64 version = 3;
    string name = 4;
    string namespace = 5;
    string parentNamespace = 6;
    string timestamp = 7;
    string clientId = 8;
    string userId = 9;
    string traceId = 10;
    string sessionId = 11;
}

// path: #/components/messages/oauthThirdPartyRequestAuthorized/payload/properties/payload
message AnonymousSchema4 {
    Oauth oauth = 1;
    OauthThirdParty oauthThirdParty = 2;
}

// path: #/components/messages/oauthThirdPartyRequestAuthorized/payload
message OauthThirdPartyRequestAuthorizedMessage {
    AnonymousSchema4 payload = 1;

    // allOf(#/components/schemas/event)
    string id = 2;
    int64 version = 3;
    string name = 4;
    string namespace = 5;
    string parentNamespace = 6;
    string timestamp = 7;
    string clientId = 8;
    string userId = 9;
    string traceId = 10;
    string sessionId = 11;
}

// path: #/components/messages/oauthThirdPartyTokenGenerated/payload/properties/payload
message AnonymousSchema5 {
    Oauth oauth = 1;
    OauthThirdParty oauthThirdParty = 2;
}

// path: #/components/messages/oauthThirdPartyTokenGenerated/payload
message OauthThirdPartyTokenGeneratedMessage {
    AnonymousSchema5 payload = 1;

    // allOf(#/components/schemas/event)
    string id = 2;
    int64 version = 3;
    string name = 4;
    string namespace = 5;
    string parentNamespace = 6;
    string timestamp = 7;
    string clientId = 8;
    string userId = 9;
    string traceId = 10;
    string sessionId = 11;
}


// --- #/components/messages/{message_name} ---


// --- #/channels/{channel_name}/{operation_type}/message ---

// path: #/channels/oauthRequest/publish/message
message OauthRequestPublishMessage {
    oneof payload {
        OauthRequestAuthorizedMessage variant0 = 1;
    }
}

// path: #/channels/oauthToken/publish/message
message OauthTokenPublishMessage {
    oneof payload {
        OauthTokenGeneratedMessage variant0 = 1;
        OauthTokenRevokedMessage variant1 = 2;
    }
}

// path: #/channels/oauthThirdPartyRequest/publish/message
message OauthThirdPartyRequestPublishMessage {
    oneof payload {
        OauthThirdPartyRequestAuthorizedMessage variant0 = 1;
    }
}

// path: #/channels/oauthThirdPartyToken/publish/message
message OauthThirdPartyTokenPublishMessage {
    oneof payload {
        OauthThirdPartyTokenGeneratedMessage variant0 = 1;
    }
}


// --- service ---

service IAMServiceOAuthEvents {
    // Oauth Request Channel

    // Publishes a message to the Oauth Request channel.
    rpc PublishToOauthRequestChannel(OauthRequestPublishMessage) returns (google.protobuf.Empty);

    // Publishes a OauthRequestAuthorizedMessage to the Oauth Request channel. (oneOf variant)
    rpc PublishOauthRequestAuthorizedMessageToOauthRequestChannel(OauthRequestAuthorizedMessage) returns (google.protobuf.Empty);

    // Oauth Token Channel

    // Publishes a message to the Oauth Token channel.
    rpc PublishToOauthTokenChannel(OauthTokenPublishMessage) returns (google.protobuf.Empty);

    // Publishes a OauthTokenGeneratedMessage to the Oauth Token channel. (oneOf variant)
    rpc PublishOauthTokenGeneratedMessageToOauthTokenChannel(OauthTokenGeneratedMessage) returns (google.protobuf.Empty);

    // Publishes a OauthTokenRevokedMessage to the Oauth Token channel. (oneOf variant)
    rpc PublishOauthTokenRevokedMessageToOauthTokenChannel(OauthTokenRevokedMessage) returns (google.protobuf.Empty);

    // Oauth Third Party Request Channel

    // Publishes a message to the Oauth Third Party Request channel.
    rpc PublishToOauthThirdPartyRequestChannel(OauthThirdPartyRequestPublishMessage) returns (google.protobuf.Empty);

    // Publishes a OauthThirdPartyRequestAuthorizedMessage to the Oauth Third Party Request channel. (oneOf variant)
    rpc PublishOauthThirdPartyRequestAuthorizedMessageToOauthThirdPartyRequestChannel(OauthThirdPartyRequestAuthorizedMessage) returns (google.protobuf.Empty);

    // Oauth Third Party Token Channel

    // Publishes a message to the Oauth Third Party Token channel.
    rpc PublishToOauthThirdPartyTokenChannel(OauthThirdPartyTokenPublishMessage) returns (google.protobuf.Empty);

    // Publishes a OauthThirdPartyTokenGeneratedMessage to the Oauth Third Party Token channel. (oneOf variant)
    rpc PublishOauthThirdPartyTokenGeneratedMessageToOauthThirdPartyTokenChannel(OauthThirdPartyTokenGeneratedMessage) returns (google.protobuf.Empty);
}
